--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 <body>
 
+
+
+  <!-- =============navbar========== -->
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container">
@@ -67,6 +70,9 @@
   </header>
 
   <main>
+
+
+    <!-- ========banner-section========= -->
     <div class="banner-section">
       <div class="box"></div>
       <div class="container">
@@ -79,10 +85,12 @@
       </div>
     </div>
 
+
+    <!-- ==========section-2=========== -->
     <div class="section-2">
       <div class="container mt-5">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 mb-4">
             <h3>Lorem ipsum dolor sit amet. <br>corporis</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
               Numquam cupiditate unde dolores atque rem nulla suscipit voluptate iste reprehenderit veritatis.</p>
@@ -100,16 +108,19 @@
       </div>
     </div>
 
+
+
+    <!-- ===========section-number============ -->
     <div class="section-3 my-5" style="background-color: #f5f7f7;">
       <div class="container">
         <div class="row number py-5 text-center">
-          <div class="col-md-3">
+          <div class="col-md-3 mb-4">
             <h1>1232</h1> <span>Students</span>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 mb-4">
             <h1>64</h1> <span>Courses</span>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 mb-4">
             <h1>42</h1> <span>Events</span>
           </div>
           <div class="col-md-3">
@@ -119,11 +130,14 @@
       </div>
     </div>
 
+
+
+    <!-- =========section-why choose========== -->
     <div class="section-4">
       <div class="container">
         <div class="row">
           <div class="col-md-3">
-            <div class="card" style="background-color: #5fcf80;">
+            <div class="card mt-4" style="background-color: #5fcf80;">
               <div class="card-body my-4" style="background-color: #5fcf80;">
                 <h3>Why Choose Our Products? </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, totam? Deserunt, blanditiis eveniet?
@@ -138,7 +152,7 @@
             </div>
           </div>
           <div class="col-md-3 text-center">
-            <div class="card">
+            <div class="card mt-4">
               <div class="card-body my-3">
                 <div class="icon mb-1">
                   <i class="fa-regular fa-eye com-icon"></i>
@@ -150,7 +164,7 @@
             </div>
           </div>
           <div class="col-md-3 text-center">
-            <div class="card">
+            <div class="card mt-4">
               <div class="card-body my-3">
                 <div class="icon mb-1">
                   <i class="fa-regular fa-star com-icon"></i>
@@ -162,7 +176,7 @@
             </div>
           </div>
           <div class="col-md-3 text-center">
-            <div class="card">
+            <div class="card mt-4">
               <div class="card-body my-3">
                 <div class="icon mb-1">
                   <i class="fa-solid fa-diamond com-icon"></i>
@@ -177,11 +191,14 @@
       </div>
     </div>
 
+
+
+    <!-- =============section-icon=========== -->
     <div class="section-5">
       <div class="container">
         <div class="row my-5">
           <div class="col-md-3">
-            <div class="card">
+            <div class="card mt-4">
               <div class="card-body">
                 <div class="icon-part2">
                   <p> <i class="fa-regular fa-eye" style="color: rgb(246, 197, 107);"></i> Lorem, ipsum.</p>
@@ -190,7 +207,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card">
+            <div class="card mt-4">
               <div class="card-body">
                 <div class="icon-part2">
                   <p> <i class="fa-solid fa-infinity" style="color: rgb(84, 84, 252);"></i> Lorem, ipsum.</p>
@@ -199,7 +216,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card">
+            <div class="card mt-4">
               <div class="card-body">
                 <div class="icon-part2">
                   <p> <i class="fa-solid fa-graduation-cap" style="color:rgb(251, 56, 89)"></i> Lorem, ipsum.</p>
@@ -208,7 +225,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card">
+            <div class="card mt-4">
               <div class="card-body">
                 <div class="icon-part2">
                   <p><i class="fa-solid fa-shuffle" style="color: rgb(66, 175, 218);"></i> Lorem, ipsum.</p>
@@ -256,13 +273,16 @@
       </div>
     </div>
 
+
+
+    <!-- ============section-popular courses============== -->
     <div class="section-6">
       <div class="container">
         <h6 class="text-secondary">COURSES </h6>
         <h1 style="font-weight: 700;">POPULAR COURSES</h1>
         <div class="row my-5">
           <div class="col-md-4">
-            <div class="card">
+            <div class="card mb-4">
               <img src="image/course-1.jpg" alt="" class="img-fluid">
               <div class="card-body">
                 <a class="btn btn-part2" href="">Web Development</a> <span style="float: right;">$169</span>
@@ -278,7 +298,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
+            <div class="card mb-4">
               <img src="image/course-2.jpg" alt="" class="img-fluid">
               <div class="card-body">
                 <a class="btn btn-part2" href="">Marketing</a> <span style="float: right;">$250</span>
@@ -294,7 +314,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
+            <div class="card mb-4">
               <img src="image/course-3.jpg" alt="" class="img-fluid">
               <div class="card-body">
                 <a class="btn btn-part2" href="">Content</a> <span style="float: right;">$180</span>
@@ -313,11 +333,14 @@
       </div>
     </div>
 
+
+
+    <!-- ============section-person details============ -->
     <div class="section-7">
       <div class="container">
         <div class="row my-5">
           <div class="col-md-4">
-            <div class="card">
+            <div class="card mb-4">
               <img src="image/trainer-1.jpg" alt="" class="img-fluid">
               <div class="card-body text-center" style="font-size: small;">
                 <h6>Walter White</h6>
@@ -334,7 +357,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
+            <div class="card mb-4">
               <img src="image/trainer-2.jpg" alt="" class="img-fluid">
               <div class="card-body text-center" style="font-size: small;">
                 <h6>Sarah jhinson</h6>
@@ -351,7 +374,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
+            <div class="card mb-4">
               <img src="image/trainer-3.jpg" alt="" class="img-fluid">
               <div class="card-body text-center" style="font-size: small;">
                 <h6>William Anderson</h6>
@@ -371,10 +394,13 @@
       </div>
     </div>
 
+
+
+    <!-- =============section-footer=========== -->
     <div class="footer py-4" style="background-color: #f5f7f7;">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4 mb-4">
             <ul class="">
               <li><a href=""><h5 class="text-dark">Skill Dev</h5></a></li>
               <li><a href="">Janata Road</a></li>
@@ -389,7 +415,7 @@
               <i class="fa-brands fa-linkedin"></i>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 mb-4">
             <ul>
               <li><a href=""><h6 class="text-dark">Useful Links </h6></a></li>
               <li><a href="">Home</a></li>
@@ -399,7 +425,7 @@
               <li><a href="">Privacy Policy</a></li>
             </ul>
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2 mb-4">
             <ul>
               <li><a href=""><h6 class="text-dark">Our Services</h6></a></li>
               <li><a href="">Web Design</a></li>
@@ -409,7 +435,7 @@
               <li><a href="">Graphic Design</a></li>
             </ul>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 mb-4">
             <ul>
               <li><a href=""><h6 class="text-dark">Our Newsletter</h6></a></li>
               <li><a href=""><p>Subscribe to our newsletter and receive the latest news about Our products and services!</p></a></li>
